# perfetto-trace-example

./: .gitignore  CMakeLists.txt  README.md  data_generator_test.cc  example.pftrace  trace_categories.h
